--- a/package.json
+++ b/package.json
@@ -17,20 +17,21 @@
   },
   "homepage": "https://github.com/Pie-Jie/part-e-wallet#readme",
   "dependencies": {
-    "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.18.2",
-    "connect-flash": "^0.1.1",
-    "cookie-parser": "^1.4.3",
-    "cookie-session": "^2.0.0-beta.3",
-    "ejs": "^2.5.7",
-    "express": "^4.16.2",
-    "mongodb": "^3.0.1",
-    "mongoose": "^5.0.0-rc2",
-    "passport": "^0.4.0",
-    "passport-facebook": "^2.1.1",
-    "passport-local": "^1.0.0",
-    "qr-image": "^3.2.0",
-    "session": "^0.1.0"
+    "express": "~4.14.0",
+    "ejs": "~2.5.2",
+    "mongoose": "~4.13.1",
+    "passport": "~0.3.2",
+    "passport-local": "~1.0.0",
+    "passport-facebook": "~2.1.1",
+    "passport-twitter": "~1.0.4",
+    "passport-google-oauth": "~1.0.0",
+    "connect-flash": "~0.1.1",
+    "bcrypt-nodejs": "latest",
+    "body-parser": "~1.15.2",
+    "cookie-parser": "~1.4.3",
+    "method-override": "~2.3.6",
+    "express-session": "~1.14.1",
+    "qr-image": "^3.2.0"
   },
   "engines": {
     "node": "9.2.0"
